@@ -15,11 +15,11 @@ import com.minecolonies.api.util.CraftingUtils;
 import com.minecolonies.api.util.ItemStackUtils;
 import com.minecolonies.api.util.OptionalPredicate;
 import com.minecolonies.core.client.gui.modules.PlantationFieldsModuleWindow;
+import com.minecolonies.core.colony.buildingextensions.PlantationField;
 import com.minecolonies.core.colony.buildings.AbstractBuilding;
 import com.minecolonies.core.colony.buildings.modules.AbstractCraftingBuildingModule;
 import com.minecolonies.core.colony.buildings.modules.BuildingExtensionsModule;
 import com.minecolonies.core.colony.buildings.moduleviews.FieldsModuleView;
-import com.minecolonies.core.colony.buildingextensions.PlantationField;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
@@ -29,7 +29,6 @@ import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.util.Tuple;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.Blocks;
 import net.neoforged.api.distmarker.Dist;
 import net.neoforged.api.distmarker.OnlyIn;
 import org.jetbrains.annotations.NotNull;
@@ -40,9 +39,9 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static com.minecolonies.api.research.util.ResearchConstants.PLANTATION_LARGE;
+import static com.minecolonies.api.util.constant.EquipmentLevelConstants.TOOL_LEVEL_WOOD_OR_GOLD;
 import static com.minecolonies.api.util.constant.NbtTagConstants.TAG_PLANTGROUND;
 import static com.minecolonies.api.util.constant.TagConstants.CRAFTING_PLANTATION;
-import static com.minecolonies.api.util.constant.EquipmentLevelConstants.TOOL_LEVEL_WOOD_OR_GOLD;
 import static com.minecolonies.api.util.constant.translation.GuiTranslationConstants.FIELD_LIST_PLANTATION_RESEARCH_REQUIRED;
 import static com.minecolonies.api.util.constant.translation.GuiTranslationConstants.FIELD_LIST_WARN_EXCEEDS_PLANT_COUNT;
 
@@ -463,16 +462,11 @@ public class BuildingPlantation extends AbstractBuilding
                   .filter(IPlantationModule.class::isInstance)
                   .map(m -> (IPlantationModule) m)
                   .findFirst()
-                  .ifPresent(module -> recipes.add(new GenericRecipe(null,
-                    new ItemStack(module.getItem()),
-                    Collections.emptyList(),
-                    List.of(module.getRequiredItemsForOperation()),
-                    1,
-                    Blocks.AIR,
-                    null,
-                    module.getRequiredTool(),
-                    Collections.emptyList(),
-                    -1)));
+                  .ifPresent(module -> recipes.add(GenericRecipe.builder()
+                          .withOutput(module.getItem())
+                          .withInputs(List.of(module.getRequiredItemsForOperation()))
+                          .withRequiredTool(module.getRequiredTool())
+                          .build()));
             }
 
             return recipes;
